package com.ops.common.dto;

public class UserDTO {

    private String username;

}
