package com.ops.common.enums;

public enum DeliveryStatus {
    PLACED,
    APPROVED,
    IN_DELIVERY,
    DELIVERED,
    DECLINED
}
