package com.ops.common.enums;

public enum PaymentStatus {
    NOT_PAYED,
    PAYED,
    REJECTED
}
